<resources>
    <string name="app_name">AsifLoginMVVMUnit0126</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="set_password">SET PASSWORD</string>
    <string name="contact_support">Contact Support</string>
    <string name="reset">RESET</string>
</resources>
