<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.asiflogin.loginmvvm0126.trade.viewmodels.LoginViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/ll_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="220dp"
            android:layout_height="80dp"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/zolo_img"
            app:layout_constraintRight_toRightOf="parent" />


        <!-- Password Label -->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_password_login"
            android:layout_width="276dp"
            android:layout_height="75dp"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:text="@={viewModel.password}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email_login"
            app:met_baseColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelAnimating="true"
            app:met_floatingLabelTextSize="16sp"
            app:met_primaryColor="@color/colorAccent"
            android:layout_marginStart="47dp" />

        <!-- Email Label -->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_email_login"
            android:layout_width="276dp"
            android:layout_height="75dp"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="32dp"
            android:hint="@string/email"
            android:nextFocusDown="@id/et_password_login"
            android:paddingLeft="10dp"
            android:text="@={viewModel.email}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:met_baseColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextSize="16sp"
            app:met_primaryColor="@color/colorAccent"
            app:met_validateOnFocusLost="true"
            android:layout_marginStart="47dp">

            <requestFocus />
        </com.rengwuxian.materialedittext.MaterialEditText>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="276dp"
            android:layout_height="55dp"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/login"
            android:enabled="@{viewModel.loginEnabled}"
            android:onClick="@{() -> viewModel.onLoginClick()}"
            android:padding="8dp"
            android:text="@string/login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password_login"
            android:layout_marginStart="47dp" />

        <Button
            android:id="@+id/btn_create"
            android:layout_width="276dp"
            android:layout_height="55dp"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/register"
            android:enabled="@{viewModel.registerEnabled}"
            android:onClick="@{() -> viewModel.onRegisterClick()}"
            android:padding="8dp"
            android:text="@string/create_account"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            android:layout_marginStart="47dp" />

        <TextView
            android:layout_width="276dp"
            android:layout_height="55dp"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="44dp"
            android:text="@string/contact_support"
            android:textSize="20sp"
            android:gravity="center"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_create"
            android:layout_marginStart="47dp" />/>
    </android.support.constraint.ConstraintLayout>
</layout>